docs/src/content/v2.0.4/pt-br/find-first.md
# Find first

`find_first` busca no máximo uma row e retorna `Option<M>`. Use-o sempre que um registro ausente for um resultado normal e esperado — não uma falha.

## Consulta básica

```rust
let account = dinoco::find_first::<Account>()
    .where_(|account| account.id.eq(&account_id))
    .execute(&client)
    .await?;
```

O tipo completo aqui é `anyhow::Result<Option<Account>>` — duas camadas de "pode não dar certo", e elas significam coisas diferentes. Só converta o `None` em erro no ponto onde a ausência de fato *é* inválida para o seu caso de uso:

```rust
let account = account.ok_or_else(|| anyhow::anyhow!("account not found"))?;
```

## Filtre o resultado

Várias chamadas `where_` se combinam com `AND`:

```rust
let account = dinoco::find_first::<Account>()
    .where_(|account| account.active.eq(true))
    .where_(|account| account.email.ends_with("@example.com"))
    .execute(&client)
    .await?;
```

Precisa de `OR`/`NOT` em vez disso? Veja [Where complex](/pt-br/docs/orm/orm/where-complex). Fields `@fulltext` também funcionam aqui, pelo mesmo `where_`:

```rust
let account = dinoco::find_first::<Account>()
    .where_(|account| account.name.fulltext("matheus"))
    .execute(&client)
    .await?;
```

## Ordene antes de escolher

`find_first` aceita exatamente um `order_by`:

```rust
let newest = dinoco::find_first::<Account>()
    .where_(|account| account.active.eq(true))
    .order_by(|account| account.created_at.desc())
    .execute(&client)
    .await?;
```

> [!WARNING]
> Sem um `order_by`, qual das várias rows compatíveis volta fica a critério do banco — ele pode retornar qualquer uma delas, e essa escolha pode até mudar entre duas execuções da mesma query, sem nenhuma outra mudança. Se "a primeira row compatível" precisa significar algo específico (a mais nova, a de maior prioridade), diga isso explicitamente com `order_by`.

## Selecione e inclua

`select::<S>()` muda o tipo de retorno para `Option<S>`; `includes(...)` carrega uma relação junto da row:

```rust
let account = dinoco::find_first::<Account>()
    .where_(|account| account.id.eq(&account_id))
    .includes(|account| account.sessions())
    .execute(&client)
    .await?;
```

Veja [Select](/pt-br/docs/orm/orm/select) e [Includes](/pt-br/docs/orm/orm/includes) para os detalhes de cada um.

## Pluck em uma única coluna

`pluck` projeta sobre uma coluna e retorna seu valor diretamente, em vez de um struct de row-model:

```rust
let email = dinoco::find_first::<Account>()
    .where_(|account| account.id.eq(&account_id))
    .pluck(|account| account.email)
    .execute(&client)
    .await?; // Option<String>
```

Ele substitui `select`/`includes` em vez de se combinar com eles — `PluckValue` decodifica a coluna direto da row.

## Transforme o resultado

`transform` roda uma closure Rust simples sobre a row, se alguma for encontrada, depois que a query (e qualquer `.includes(...)`) já rodou:

```rust
let summary = dinoco::find_first::<Account>()
    .where_(|account| account.id.eq(&account_id))
    .transform(|account| serde_json::json!({
        "id": account.id,
        "email": account.email,
    }))
    .execute(&client)
    .await?; // Option<serde_json::Value>
```

## Leia no primary

Com réplicas configuradas, adicione `read_in_primary()` quando essa query específica precisa observar um write que acabou de acontecer:

```rust
let account = dinoco::find_first::<Account>()
    .where_(|account| account.id.eq(&account_id))
    .read_in_primary()
    .execute(&client)
    .await?;
```

Todo `.includes(...)` dessa mesma query segue ela para a primary também — não dá para rotear a row principal para a primary enquanto deixa seus includes caírem numa réplica.

## Dentro de uma transaction

`execute` também aceita o `tx` entregue por uma closure [`transaction(...)`](/pt-br/docs/orm/orm/transactions#leia-dentro-de-uma-transaction). A query — e todo `.includes(...)` que ela carrega — roda então na própria conexão da transaction, então enxerga rows que a closure inseriu ou atualizou antes do commit:

```rust
dinoco::transaction(&client, |tx| async move {
    dinoco::insert_into::<Account>().values(&account).execute(tx).await?;

    let stored = dinoco::find_first::<Account>()
        .where_(|x| x.id.eq(&account.id))
        .includes(|x| x.sessions())
        .execute(tx)
        .await?; // Some(account), mesmo sem nada commitado ainda

    Ok(stored)
})
.await?;
```

`.pluck(...)` e `.transform(...)` funcionam do mesmo jeito. `read_in_primary()` não tem o que mudar ali: uma transaction sempre roda na primary.
